--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
       100% { background: linear-gradient(135deg, #1a0033, #3a0050, #660066); }
     }
 
-    /* Navigation Link */
+    /* Navigation Links */
     .character-link {
       position: absolute;
       top: 20px;
-      left: 50%;
       transform: translateX(-50%);
       font-size: 1.2rem;
       text-decoration: none;
@@ -47,10 +46,18 @@
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
       transition: background 0.3s, transform 0.3s;
       z-index: 4;
+      margin: 0 10px;
+    }
+    /* We position these two links side by side */
+    .persona-link {
+      left: 40%;
+    }
+    .archetype-link {
+      left: 60%;
     }
     .character-link:hover {
       background: #fff;
-      transform: translateX(-50%) scale(1.05);
+      transform: scale(1.05);
     }
 
     /* Pulsing Hexagon with Purple Gradient */
@@ -146,8 +153,10 @@
   </style>
 </head>
 <body>
-  <!-- Navigation Link -->
-  <a href="character-creation.html" class="character-link">Character Creation</a>
+
+  <!-- TWO NEW LINKS -->
+  <a href="persona.html" class="character-link persona-link">Persona</a>
+  <a href="archetype.html" class="character-link archetype-link">Archetype</a>
 
   <!-- Sacred Geometry Overlay: Flower of Life -->
   <svg class="sacred-geometry" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
@@ -186,5 +195,6 @@
 
   <!-- Tagline -->
   <div class="tagline">Where Intensity, Fate & the Purple Cosmos Converge</div>
+
 </body>
 </html>
