--- a/persona.html
+++ b/persona.html
@@ -92,7 +92,7 @@
         return;
       }
 
-      // Get existing, add new one
+      // Get existing personas and add the new one
       const personas = getStoredPersonas();
       personas.push(newPersona);
       saveStoredPersonas(personas);
@@ -114,7 +114,7 @@
         return;
       }
 
-      // Create a checkbox for each
+      // Create a checkbox for each persona
       personas.forEach((p, index) => {
         const div = document.createElement('div');
         div.className = 'persona-item';
@@ -128,31 +128,25 @@
       });
     }
 
-   function exportSelectedPersonas() {
-  // Gather checked boxes
-  const checkboxes = document.querySelectorAll('#personaList input[type="checkbox"]:checked');
-  if (checkboxes.length === 0) {
-    alert('No personas selected.');
-    return;
-  }
+    function exportSelectedPersonas() {
+      // Gather checked boxes
+      const checkboxes = document.querySelectorAll('#personaList input[type="checkbox"]:checked');
+      if (checkboxes.length === 0) {
+        alert('No personas selected.');
+        return;
+      }
 
-  const personas = getStoredPersonas();
-  // Add header "Persona" at the top of the output
-  let outputText = 'Persona\n\n';
-  checkboxes.forEach(chk => {
-    const idx = parseInt(chk.value, 10);
-    const p = personas[idx];
-    outputText += `Name: ${p.name}\nDescription: ${p.description}\n\n`;
-  });
+      const personas = getStoredPersonas();
+      // Add header "Persona" at the top of the output
+      let outputText = 'Persona\n\n';
+      checkboxes.forEach(chk => {
+        const idx = parseInt(chk.value, 10);
+        const p = personas[idx];
+        outputText += `Name: ${p.name}\nDescription: ${p.description}\n\n`;
+      });
 
-  // Force download a new text file (if you save with the same name, it overwrites the previous content)
-  downloadFile('personaOutput.txt', outputText);
-}
-
-
-      // If you want to "delete" old content, well, each time you download
-      // a new personaOutput.txt, it overwrites the previous content
-      // if you choose the same filename in your downloads folder.
+      // Force download a new text file (if you save with the same name, it overwrites previous content)
+      downloadFile('personaOutput.txt', outputText);
     }
 
     function downloadFile(filename, text) {
@@ -163,7 +157,6 @@
       link.click();
       URL.revokeObjectURL(link.href);
     }
-
   </script>
 </body>
 </html>
