--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     .archetype-link {
       left: 60%;
     }
+    .traits-link {
+      bottom; 50%
+    }
     .character-link:hover {
       background: #fff;
       transform: scale(1.05);
@@ -157,7 +160,7 @@
   <!-- TWO NEW LINKS -->
   <a href="persona.html" class="character-link persona-link">Persona</a>
   <a href="archetype.html" class="character-link archetype-link">Archetype</a>
-
+  <a href="traits.html" class="character-link archetype-link">Archetype</a>
   <!-- Sacred Geometry Overlay: Flower of Life -->
   <svg class="sacred-geometry" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
     <circle cx="400" cy="300" r="100" />
