--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
   <!-- TWO NEW LINKS -->
   <a href="persona.html" class="character-link persona-link">Persona</a>
   <a href="archetype.html" class="character-link archetype-link">Archetype</a>
-  <a href="traits.html" class="character-link archetype-link">Archetype</a>
+  <a href="traits.html" class="character-link traits-link">Traits</a>
+
   <!-- Sacred Geometry Overlay: Flower of Life -->
   <svg class="sacred-geometry" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
     <circle cx="400" cy="300" r="100" />
