--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
       100% { background: linear-gradient(135deg, #1a0033, #3a0050, #660066); }
     }
 
-    /* Navigation Links */
-    .character-link {
+    /* Navigation Button */
+    .select-btn {
       position: absolute;
       top: 20px;
+      left: 50%;
       transform: translateX(-50%);
       font-size: 1.2rem;
       text-decoration: none;
@@ -46,32 +47,9 @@
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
       transition: background 0.3s, transform 0.3s;
       z-index: 4;
-      margin: 0 10px;
+      cursor: pointer;
     }
-    /* We position these two links side by side */
-    .persona-link {
-      left: 40%;
-    }
-    .archetype-link {
-      left: 60%;
-    }
-    .traits-link {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 1.2rem;
-  text-decoration: none;
-  background: rgba(255, 255, 255, 0.9);
-  color: #800080;
-  padding: 10px 20px;
-  border-radius: 30px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  transition: background 0.3s, transform 0.3s;
-  z-index: 4;
-}
-
-    .character-link:hover {
+    .select-btn:hover {
       background: #fff;
       transform: scale(1.05);
     }
@@ -115,20 +93,7 @@
       z-index: 6;
     }
 
-    /* Fibonacci Spiral Overlay (Artistic Interpretation) */
-    .fibonacci {
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      top: calc(50% - 150px);
-      left: calc(50% - 150px);
-      opacity: 0.4;
-      pointer-events: none;
-      z-index: 2;
-      transform: rotate(15deg);
-    }
-
-    /* Sacred Geometry Overlay: Flower of Life Pattern */
+    /* Overlays (Geometry, Fibonacci, Alchemical Symbols) */
     .sacred-geometry {
       position: absolute;
       width: 800px;
@@ -144,8 +109,17 @@
       stroke: rgba(255, 255, 255, 0.1);
       stroke-width: 2;
     }
-
-    /* Alchemical Symbols Overlay */
+    .fibonacci {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      top: calc(50% - 150px);
+      left: calc(50% - 150px);
+      opacity: 0.4;
+      pointer-events: none;
+      z-index: 2;
+      transform: rotate(15deg);
+    }
     .alchemical-symbols {
       position: absolute;
       width: 100%;
@@ -170,10 +144,8 @@
 </head>
 <body>
 
-  <!-- TWO NEW LINKS -->
-  <a href="persona.html" class="character-link persona-link">Persona</a>
-  <a href="archetype.html" class="character-link archetype-link">Archetype</a>
-  <a href="traits.html" class="character-link traits-link">Traits</a>
+  <!-- Single Navigation Button -->
+  <button class="select-btn" id="selectCategoryBtn">Select Category</button>
 
   <!-- Sacred Geometry Overlay: Flower of Life -->
   <svg class="sacred-geometry" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
@@ -213,5 +185,19 @@
   <!-- Tagline -->
   <div class="tagline">Where Intensity, Fate & the Purple Cosmos Converge</div>
 
+  <script>
+    document.getElementById('selectCategoryBtn').addEventListener('click', function() {
+      const category = prompt("Which category do you want?\nEnter: persona, archetype, or traits").toLowerCase().trim();
+      if (category === "persona") {
+        window.location.href = "persona.html";
+      } else if (category === "archetype") {
+        window.location.href = "archetype.html";
+      } else if (category === "traits") {
+        window.location.href = "traits.html";
+      } else {
+        alert("Invalid category. Please enter persona, archetype, or traits.");
+      }
+    });
+  </script>
 </body>
 </html>
