--- a/index.html
+++ b/index.html
@@ -54,30 +54,11 @@
       transform: scale(1.05);
     }
 
-    /* Pulsing Hexagon with Purple Gradient */
-    .hexagon {
-      width: 400px;
-      height: 400px;
-      background: linear-gradient(135deg, #8a2be2, #4b0082);
-      clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #fff;
-      font-size: 4rem;
-      font-weight: bold;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 4px;
-      box-shadow: 0 0 50px rgba(138, 43, 226, 0.8);
-      animation: pulse 2s infinite;
-      position: relative;
+    /* Remove the original hexagon styling and add new styling for the centered image */
+    .center-image {
+      width: 400px; /* adjust width as needed */
+      height: auto;
       z-index: 5;
-    }
-    @keyframes pulse {
-      0%   { transform: scale(1);    box-shadow: 0 0 50px rgba(138, 43, 226, 0.8); }
-      50%  { transform: scale(1.1);  box-shadow: 0 0 80px rgba(138, 43, 226, 1); }
-      100% { transform: scale(1);    box-shadow: 0 0 50px rgba(138, 43, 226, 0.8); }
     }
 
     /* Tagline */
@@ -179,8 +160,8 @@
     <span class="alchemical-symbol symbol-salt">■</span>
   </div>
 
-  <!-- Centered Pulsing Hexagon -->
-  <div class="hexagon">Fashadow</div>
+  <!-- Centered Image (replacing the pulsing hexagon) -->
+  <img src="765df34e-f682-467a-a7a3-89592306d494.webp" alt="Fashadow" class="center-image">
 
   <!-- Tagline -->
   <div class="tagline">Where Intensity, Fate & the Purple Cosmos Converge</div>
