--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   </div>
 
   <!-- Centered Image (replacing the pulsing hexagon) -->
-  <img src="765df34e-f682-467a-a7a3-89592306d494.webp" alt="Fashadow" class="center-image">
+  <img src="Demitree.webp" alt="Fashadow" class="center-image">
 
   <!-- Tagline -->
   <div class="tagline">Where Intensity, Fate & the Purple Cosmos Converge</div>
