--- a/index.html
+++ b/index.html
@@ -45,12 +45,32 @@
       background: #fff;
       transform: scale(1.05);
     }
-    /* Centered Image with upward movement */
+    /* Centered Image (Demitree) moved upward */
     .center-image {
       width: 400px;
       height: auto;
       z-index: 5;
-      transform: translateY(-100px); /* Moves the image up by 100px */
+      transform: translateY(-100px);
+    }
+    /* Black Hole on the right */
+    .black-hole {
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translate(20%, -50%);
+      width: 150px;
+      height: auto;
+      z-index: 5;
+    }
+    /* Neutron Star on the left */
+    .neutron-star {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translate(-20%, -50%);
+      width: 150px;
+      height: auto;
+      z-index: 5;
     }
     .rotating-quote {
       position: absolute;
@@ -68,9 +88,13 @@
   </style>
 </head>
 <body>
-
   <button class="select-btn" id="selectCategoryBtn">Select Category</button>
+  <!-- Neutron Star on the left -->
+  <img src="neutronstar.webp" alt="Neutron Star" class="neutron-star">
+  <!-- Centered Image: Demitree -->
   <img src="Demitree.webp" alt="Fashadow" class="center-image">
+  <!-- Black Hole on the right -->
+  <img src="blackhole.webp" alt="Black Hole" class="black-hole">
   <div id="rotatingQuote" class="rotating-quote"></div>
 
   <script>
@@ -88,7 +112,14 @@
       }
     });
 
-   
+    // Fetch quotes from quotes.json and display a random quote
+    fetch('quotes.json')
+      .then(response => response.json())
+      .then(data => {
+        const quotesArray = data.quotes || data;
+        const randomIndex = Math.floor(Math.random() * quotesArray.length);
+        const randomQuote = quotesArray[randomIndex];
+        document.getElementById("rotatingQuote").innerText = randomQuote.text;
       })
       .catch(error => console.error('Error fetching quotes:', error));
   </script>
