--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <!-- Centered Image: Demitree -->
   <img src="Demitree.webp" alt="Fashadow" class="center-image">
   <!-- Black Hole on the right -->
-  <img src="blackhole.webp" alt="Black Hole" class="black-hole">
+  <img src="System.png" alt="Black Hole" class="black-hole">
   <div id="rotatingQuote" class="rotating-quote"></div>
 
   <script>
