--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Mystic Library - Home</title>
-  <!-- Import a mystical-themed font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
   <style>
     /* 
@@ -15,136 +14,100 @@
     html, body {
       margin: 0;
       padding: 0;
-      /* Full-screen background with a mystical gradient */
       background: radial-gradient(circle at center, rgba(255, 223, 0, 0.2) 0%, #1a002b 80%, #000 100%);
-      /* The gradient starts with a faint golden glow (rgba(255,223,0,0.2)) at the center 
-         and transitions to a deep purple (#1a002b) and then black (#000) at the edges. */
-      color: #e0e0e0;  /* Light text color for readability on dark background */
-      font-family: 'Cinzel Decorative', serif;  /* Mystic font for esoteric theme */
-      /* If the special font is not available, the browser will use a serif fallback */
+      color: #e0e0e0;
+      font-family: 'Cinzel Decorative', serif;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-    /* (Optional) You can overlay subtle geometric patterns on the background for extra effect.
-       For example, using a semi-transparent sacred geometry image:
-       
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: url('pattern.png') repeat;
-      opacity: 0.05;  /* very subtle pattern overlay */
-      pointer-events: none; /* allow clicks through */
     }
-    */
-
-    /* Top navigation bar */
     nav {
-      /* Semi-transparent dark background for a mystical look (stays visible over page background) */
       background: linear-gradient(to right, rgba(25,0,50,0.9), rgba(0,0,0,0.9));
       width: 100%;
       padding: 0;
     }
     nav ul {
       display: flex;
-      justify-content: center;  /* Center the navigation items */
+      justify-content: center;
       align-items: center;
       list-style: none;
       margin: 0;
       padding: 0;
-      height: 60px; /* Navigation bar height */
+      height: 60px;
     }
     nav li {
-      margin: 0 1.5em;  /* Spacing between nav items */
+      margin: 0 1.5em;
     }
     nav a {
-      color: #d4af37;  /* Gold color for nav links to match alchemical theme */
+      color: #d4af37;
       text-decoration: none;
       font-size: 1.1em;
-      padding: 8px 12px;          /* Larger clickable area */
+      padding: 8px 12px;
       display: inline-block;
       transition: background 0.3s ease, color 0.3s ease;
     }
     nav a:hover {
-      /* Smooth hover effect: lighter background and brighter text */
-      background: rgba(212, 175, 55, 0.2); /* semi-transparent gold */
+      background: rgba(212, 175, 55, 0.2);
       color: #ffffff;
       border-radius: 4px;
     }
-    /* Highlight the current page link */
     nav a.active {
       border-bottom: 2px solid #d4af37;
     }
-
-    /* Main content area (centered content) */
     main.centerpiece-container {
-      /* Flexbox to center content horizontally and vertically */
-      flex: 1;  /* take remaining space after nav */
+      flex: 1;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
       position: relative;
     }
-    /* Centerpiece: Merkabah inside Vector Equilibrium */
     #merkabah-container {
       position: relative;
       display: inline-block;
-      /* Tooltip will be positioned relative to this container */
     }
     #merkabah-container img {
-      /* Responsive size for the sacred geometry image */
-      width: clamp(150px, 30vw, 300px);  /* at least 150px, at most 300px, or 30% of viewport width */
+      width: clamp(150px, 30vw, 300px);
       max-width: 100%;
       height: auto;
-      /* Subtle initial glow effect using drop-shadow (visible if image has transparency around shape) */
       filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
       transition: transform 0.6s ease, filter 0.6s ease;
     }
-    /* Hover effect for the Merkabah shape */
     #merkabah-container:hover img {
-      transform: scale(1.1);  /* slightly enlarge the shape on hover */
-      /* Intensify the glow on hover */
+      transform: scale(1.1);
       filter: drop-shadow(0 0 20px rgba(255, 255, 255, 0.8));
     }
-
-    /* Tooltip styling (hidden by default) */
     #merkabah-container .tooltip {
       position: absolute;
-      bottom: 110%;        /* position tooltip above the image (100% + a little extra space) */
+      bottom: 110%;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(0, 0, 0, 0.8);  /* dark background for tooltip text */
+      background: rgba(0, 0, 0, 0.8);
       color: #ffffff;
       padding: 8px 12px;
       border-radius: 5px;
       font-size: 0.9em;
       width: max-content;
       max-width: 200px;
-      pointer-events: none;  /* ignore mouse events (prevent flicker) */
+      pointer-events: none;
       opacity: 0;
       visibility: hidden;
       transition: opacity 0.3s ease;
     }
-    /* Show tooltip on hover of the container */
     #merkabah-container:hover .tooltip {
       opacity: 1;
       visibility: visible;
     }
-    /* Tooltip arrow (small triangle) pointing downwards */
     #merkabah-container .tooltip::after {
       content: "";
       position: absolute;
-      top: 100%;  /* bottom of tooltip box */
+      top: 100%;
       left: 50%;
       transform: translateX(-50%);
       border-left: 6px solid transparent;
       border-right: 6px solid transparent;
-      border-top: 6px solid rgba(0, 0, 0, 0.8);  /* arrow color matches tooltip background */
+      border-top: 6px solid rgba(0, 0, 0, 0.8);
     }
-
-    /* Responsive design: stack nav items vertically on very small screens */
     @media (max-width: 400px) {
       nav ul {
         flex-direction: column;
@@ -155,28 +118,54 @@
         margin: 0.5em 0;
       }
     }
+    form {
+      margin-top: 20px;
+      text-align: center;
+    }
+    #uploaded-image {
+      display: block;
+      margin: 20px auto;
+      max-width: 100%;
+      height: auto;
+    }
   </style>
 </head>
 <body>
-  <!-- Top Navigation -->
   <nav>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="library.html">Library</a></li>
     </ul>
   </nav>
-
-  <!-- Centered Main Content -->
   <main class="centerpiece-container">
-    <!-- Merkabah (star tetrahedron) within Vector Equilibrium (cuboctahedron) -->
     <div id="merkabah-container">
-      <!-- Sacred geometry image (replace 'merkabah.png' with actual image of the shape) -->
       <img id="merkabah" src="merkabah.png" alt="Merkabah (star tetrahedron) within a Vector Equilibrium (cuboctahedron)">
-      <!-- Tooltip explaining the significance of the shape -->
       <div class="tooltip">
         The Merkabah (star tetrahedron) enclosed in the Vector Equilibrium symbolizes perfect balance and harmony.
       </div>
     </div>
   </main>
+  <form id="upload-form" enctype="multipart/form-data">
+    <input type="file" name="file" id="file-input" accept="image/*">
+    <button type="submit">Upload Image</button>
+  </form>
+  <img id="uploaded-image" src="" alt="Uploaded Image">
+  <script>
+    document.getElementById('upload-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const formData = new FormData();
+      const fileInput = document.getElementById('file-input');
+      formData.append('file', fileInput.files[0]);
+
+      const response = await fetch('/upload', {
+        method: 'POST',
+        body: formData
+      });
+
+      const result = await response.json();
+      const uploadedImageUrl = `/uploads/${result.filename}`;
+      document.getElementById('uploaded-image').src = uploadedImageUrl;
+    });
+  </script>
 </body>
 </html>
